feat: adicionar sistema de ofertas e catálogo público de produtos
Implementa um sistema de ofertas permitindo que empresas criem promoções com controle de preço e validade. Adiciona endpoints públicos para catálogo de produtos com paginação para navegação dos clientes.

Backend:
- Cria OfertaService e OfertaController para gerenciamento de ofertas (criação e listagem por empresa)
- Adiciona endpoints públicos para visualização de produtos ativos e detalhes de produtos
- Estende ProdutoEmpresaDetalhesDTO com informações de oferta, empresa e formatação de endereço
- Adiciona OfertaRequestDTO e OfertaResponseDTO para contratos da API de ofertas
- Atualiza OfertaRepository com consultas para filtrar ofertas por produto e empresa
- Estende ProdutoRepository com consulta paginada para produtos ativos
- Refatora DataInitializer para usar injeção via construtor e inicializar categorias no startup
- Melhora SecurityConfig com configuração de CORS mais limpa e injeção via construtor
- Atualiza propriedades da aplicação com otimizações para o banco H2

Frontend:
- Cria páginas para gestão de ofertas (Oferta, NovaOferta) e produtos (ProdutoDetalhes, CadastroProduto)
- Implementa listagem de produtos com modais para visualização e gerenciamento
- Adiciona criação de ofertas diretamente pela visualização do produto
- Atualiza vitrine pública (ClienteHome) para consumir dados reais da API com cálculo de descontos
- Melhora navegação no dashboard administrativo integrando áreas de ofertas
- Adiciona tratamento de erros e estados de carregamento nas novas funcionalidades

Essas mudanças viabilizam o fluxo completo de ofertas: empresas cadastram produtos e criam promoções com tempo limitado, exibidas no catálogo público para os clientes.